fix key orientation mobile

--- a/assets/main.css
+++ b/assets/main.css
@@ -26,7 +26,7 @@ HTML, body {
 li {
   list-style: none;
   position: relative;
-  float: left;
+  float: right;
   width: 10%;
   height: 90%;
 }
@@ -89,6 +89,7 @@ li > div {
 }
 
 @media screen and (max-width: 750px) {
+
   li {
     list-style: none;
     position: relative;
@@ -121,6 +122,7 @@ li > div {
     width: 0;
     height: 0;
   }
+
 }
 
 @media screen and (max-width: 750px) and (max-height: 750px){
